# cpp_learning_path

./: .clang-format  .gitignore  README.md  clock-src.bat  mkprj.bat
01_cpp_primer/: .editorconfig  mkprj.bat
01_cpp_primer/1_2/: entry.cpp
01_cpp_primer/2_4/: entry.cpp
01_cpp_primer/2_5/: run.bat
1_1/: build.bat
1_3/: entry.cpp
1_4/: entry.cpp
1_5/: entry.cpp  infile.txt  run.bat  sales_item.h
1_cpp_primer/1_5/: entry.cpp
1_cpp_primer/1_6/: entry.cpp  infile.txt
1_cpp_primer/2_3/: entry.cpp
1_cpp_primer/2_5/: entry.cpp
1_cpp_primer/2_6/: build.bat  infile.txt
2_1/: entry.cpp
2_2/: entry.cpp
cmake/01_intro_to_cmake/: CMakeLists.txt  build.bat  main.cpp  run.bat
cmake/02_ultimate_quick_start/: CMakeLists.txt  build.bat  clean.bat  run.bat
cmake/02_ultimate_quick_start/cmake/: compiler_warnings.cmake  standard_project_settings.cmake
cmake/02_ultimate_quick_start/include/: print_message.h  types.h
cmake/02_ultimate_quick_start/src/: CMakeLists.txt  main.cpp
cmake/03_intro_to_modern_cmake/01_intro/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/02_variables/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/03_programming/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/04_communicating_with_code/: CMakeLists.txt  Version.h.in
cmake/03_intro_to_modern_cmake/05_structure_projects/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/05_structure_projects/apps/: CMakeLists.txt  app.cpp
cmake/03_intro_to_modern_cmake/05_structure_projects/src/: CMakeLists.txt  lib.cpp
cmake/03_intro_to_modern_cmake/06_running_programs/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/07_simple_example/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/08_cpp11_and_beyond/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/09_small_common_needs/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/10_utilities/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/11_useful_modules/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/12_ides/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/13_debugging/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/14_submodules/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/15_fetch/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/16_google_test/: CMakeLists.txt
cmake/03_intro_to_modern_cmake/17_catch2/: CMakeLists.txt  testlib.cpp
cmake/_project_template/: CMakeLists.txt  build.bat  run.bat
cmake/_project_template/app/: CMakeLists.txt
cmake/_project_template/app/src/: main.cpp
cmake/_project_template/cmake/: compiler_warnings.cmake  standard_project_settings.cmake  static_analysis.cmake
cmake/_project_template/include/: types.h
cmake/_project_template/libs/lib/: CMakeLists.txt
cmake/_project_template/libs/lib/include/lib/: lib.h
cmake/_project_template/libs/lib/src/: lib.cpp
cmake/_project_template/src/: CMakeLists.txt
cpp/: .clang-format  .clang-tidy  .gitignore
cpp/00_learn_cpp/: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  build.bat  configure.bat
cpp/00_learn_cpp/00-project-template/: CMakeLists.txt  main.cpp
cpp/00_learn_cpp/01-basics/: CMakeLists.txt  main.cpp
cpp/00_learn_cpp/cmake/: helpers.cmake
cpp/01_cpp_primer/1_1/: entry.cpp
cpp/01_cpp_primer/1_2/: entry.cpp
cpp/01_cpp_primer/1_4/: entry.cpp
cpp/01_cpp_primer/1_5/: entry.cpp  infile.txt
cpp/01_cpp_primer/1_6/: entry.cpp
cpp/01_cpp_primer/2_1/: entry.cpp
cpp/01_cpp_primer/2_2/: entry.cpp
cpp/01_cpp_primer/2_3/: entry.cpp
cpp/01_cpp_primer/2_4/: entry.cpp
cpp/01_cpp_primer/2_5/: entry.cpp
cpp/01_cpp_primer/2_6/: entry.cpp  sales_item.h
cpp/01_cpp_primer/3_1/: entry.cpp  infile.txt
cpp/01_cpp_primer/3_2/: entry.cpp
cpp/01_cpp_primer/3_3/: entry.cpp
cpp/01_cpp_primer/3_4/: build.bat  entry.cpp
